2007-08-25  Stipe Tolj  <stolj at kannel.org>
   * gwlib/gwthread-pthread.c: fix valgrind conditional jump error report
     in gwthread_pool() for .revents value.

2007-08-03 Alexander Malysh <amalysh at kannel.org>
   * gw/smsc/smpp_pdu.c: whitespaces fixes and various PDU parsing fixes and
     enhancements. This should not break anything.

2007-08-03 Alexander Malysh <amalysh at kannel.org>
   * doc/userguide/userguide.xml, gw/smsbox.c: fixed userguide for XML post.
     Also fixed XML Post parsing of smsc-id to match userguide. It's possible
     that this will break existing applications.

2007-07-22 Alexander Malysh <amalysh at kannel.org>
   * gw/ota_compiler.c: added new WLAN-related tokens in order to get new
     Nokia WiFi/VoIP OTA provisioning working. See OMA-DM-CP-2005-001R02-CR_CP-WLAN-.doc.
     This fixed #406.
     Thanks to sobomax for patch.

2007-07-22 Alexander Malysh <amalysh at kannel.org>
   * gw/smsc/smsc_at.c: added CLOCAL to c_cflag. This fixed #404.
     Thanks to sobomax for reporting and patch.

2007-07-22 Alexander Malysh <amalysh at kannel.org>
   * gw/smsc/smsc_at.c: set reconnecting = 1 if we have issues opening
     device. So we will sleep reconnect time instead of hammering on
     maybe not existing device. This should fix #412.

2007-07-22 Alexander Malysh <amalysh at kannel.org>
   * gwlib/mime.c: don't add an extra CRLF to the end of a message part.
     Thanks to Paul Bagyenda <bagyenda at dsmagic.com>.
     [Msg-Id: <F83BC280-AF9A-4347-A255-6FF1A314C525@dsmagic.com>]

2007-06-14  Stipe Tolj  <stolj at kannel.org>
   * gw/dlr.h: fix bitmask for DLR_IS_NOT_FINAL macro, since DLR_SMSC_FAIL is
     a final state, we need to ommit it here to be semantically correct.

2007-06-12 Alexander Malysh <amalysh at kannel.org>
   * gw/bb_smscconn.c: fixed segfault and simplified handling of timeouted
     concatenated MOs.

2007-06-12 Alexander Malysh <amalysh at kannel.org>
   * gwlib/list.c: fixed gwlist_timed_consume.
